--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,1 @@
-{
-  "version": 2,
-  "name": "music-album",
-  "builds": [{ "src": "server.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/app.js" }]
-}
+{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
